# warp-rnnt

./: .gitignore  LICENSE  README.md  core.cu  core.h  core_compact.cu  core_compact_gather.cu  core_gather.cu  gather.cu
pytorch_binding/: .gitignore  BackwardTest.txt  BenchMarkForwardResults.txt  BenchMarkResults.txt  MANIFEST.in  README.md  bench.sh  benchmark.py  benchmark2.py  binding.cpp  core_compact.cu  core_compact_gather.cu  gather.cu  requirements.txt  results  run_benchmark.sh  setup.py
pytorch_binding/test/: new_benchmark.py
pytorch_binding/warp_rnnt/: __init__.py  benchmark.py  new_test.py  test.py
tensorflow_binding/: CMakeLists.txt  README.md  binding.cpp  core.cu  core.h  core_gather.cu  requirements.txt  setup.py
tensorflow_binding/src/: transducer_op_kernel.cc
tensorflow_binding/tests/: test_transducer_op_kernel.py
tensorflow_binding/transducer_tensorflow/: __init__.py
tensorflow_binding/warp_rnnt_tf/: __init__.py  test.py
